force-app/main/default/objects/API_Synchronization_Item__c/API_Synchronization_Item__c.object-meta.xml
<CustomObject>
    <description>object will contain actual information of sync status of account and contact.</description>
    <label>API Synchronization Item</label>
    <nameField>
        <displayFormat>ASI-{0000}</displayFormat>
        <label>API Synchronization Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Synchronization Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>