force-app/main/default/objects/API_Synchronization_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>API Synchronization Items</relationshipLabel>
    <relationshipName>API_Synchronization_Items</relationshipName>
    <type>Lookup</type>
</CustomField>