force-app/main/default/objects/API_Synchronization_Item__c/fields/Amendment_Request__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Amendment Request</description>
    <label>Amendment Request</label>
    <referenceTo>Change_Request__c</referenceTo>
    <relationshipLabel>API Synchronization Items</relationshipLabel>
    <relationshipName>API_Synchronization_Items</relationshipName>
    <type>Lookup</type>
</CustomField>