force-app/main/default/objects/API_Synchronization_Item__c/fields/API_Synchronization_Transaction__c.field-meta.xml
<CustomField>
    <fullName>API_Synchronization_Transaction__c</fullName>
    <description>API Synchronization Transaction</description>
    <label>API Synchronization Transaction</label>
    <referenceTo>API_Synchronization_Transaction__c</referenceTo>
    <relationshipLabel>API Synchronization Items</relationshipLabel>
    <relationshipName>API_Synchronization_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>