force-app/main/default/objects/API_Synchronization_Item__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Credit Note</description>
    <label>Credit Note</label>
    <referenceTo>blng__CreditNote__c</referenceTo>
    <relationshipLabel>API Synchronization Items</relationshipLabel>
    <relationshipName>API_Synchronization_Items</relationshipName>
    <type>Lookup</type>
</CustomField>