force-app/main/default/objects/API_Synchronization_Item__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message if any after API callout.</description>
    <label>Error Message</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>