force-app/main/default/objects/API_Synchronization_Item__c/fields/External_Tax_System__c.field-meta.xml
<CustomField>
    <fullName>External_Tax_System__c</fullName>
    <description>External Tax System</description>
    <label>External Tax System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>External_Tax_System</valueSetName>
    </valueSet>
</CustomField>