force-app/main/default/objects/API_Synchronization_Item__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice</description>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>API Synchronization Items</relationshipLabel>
    <relationshipName>API_Synchronization_Items</relationshipName>
    <type>Lookup</type>
</CustomField>