force-app/main/default/objects/API_Synchronization_Item__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <description>Callout Request Body</description>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>