force-app/main/default/objects/API_Synchronization_Item__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>Callout Response Body</description>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>