force-app/main/default/objects/API_Synchronization_Item__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <description>HTTP response code of API callout.</description>
    <label>Response Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>