force-app/main/default/objects/API_Synchronization_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>API Synchronization Item Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Post Documents</fullName>
            </value>
            <value>
                <fullName>Accounting Credit Status</fullName>
            </value>
            <value>
                <fullName>Amendment Request Approved/Rejected</fullName>
            </value>
            <value>
                <fullName>Opportunity Rejected</fullName>
            </value>
            <value>
                <fullName>Opportunity Closed Lost</fullName>
            </value>
            <value>
                <fullName>Amendment Completed</fullName>
            </value>
            <value>
                <fullName>Re-Print for PO number change</fullName>
            </value>
            <value>
                <fullName>Re-Print for Bill To Account Details Change</fullName>
            </value>
            <value>
                <fullName>Re-Print for Contact Details Change</fullName>
            </value>
            <value>
                <fullName>Amended Data Sync</fullName>
                <label>Amended Data Sync - CRM</label>
            </value>
            <value>
                <fullName>Re-Print for Ship To Account Details Change</fullName>
            </value>
            <value>
                <fullName>Re-Print for Account Details Change</fullName>
            </value>
            <value>
                <fullName>Account ERP Number Update</fullName>
            </value>
            <value>
                <fullName>Post Payment Transactions</fullName>
            </value>
            <value>
                <fullName>OLI Start End Amount Update</fullName>
            </value>
            <value>
                <fullName>Amended Data Sync - OH</fullName>
            </value>
            <value>
                <fullName>ERP Ref. Number back update to CRM</fullName>
            </value>
            <value>
                <fullName>Document Pull request from ERP</fullName>
            </value>
            <value>
                <fullName>Account Billing Address Change</fullName>
                <isActive>false</isActive>
                <label>Account Billing Address Change</label>
            </value>
            <value>
                <fullName>Account Credit Status</fullName>
                <isActive>false</isActive>
                <label>Account Credit Status</label>
            </value>
            <value>
                <fullName>Account Name Change</fullName>
                <isActive>false</isActive>
                <label>Account Name Change</label>
            </value>
            <value>
                <fullName>Account Shipping Address Change</fullName>
                <isActive>false</isActive>
                <label>Account Shipping Address Change</label>
            </value>
            <value>
                <fullName>Bill To Account change</fullName>
                <isActive>false</isActive>
                <label>Bill To Account change</label>
            </value>
            <value>
                <fullName>Change Request Completed</fullName>
                <isActive>false</isActive>
                <label>Change Request Completed</label>
            </value>
            <value>
                <fullName>Ship To Account change</fullName>
                <isActive>false</isActive>
                <label>Ship To Account change</label>
            </value>
            <value>
                <fullName>VAT Registration Number Change</fullName>
                <isActive>false</isActive>
                <label>VAT Registration Number Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>