force-app/main/default/objects/API_Synchronization_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>X3rd_Party_ERP_System__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Invoice__c</columns>
    <columns>Credit_Note__c</columns>
    <columns>Order__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Amendment_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>